--- a/static/css/base.css
+++ b/static/css/base.css
@@ -257,6 +257,43 @@ input[name='q']::placeholder {
     body {
         height: calc(100vh - 116px);
     }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+        color: #3F0D12;
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
+    .btn.btn-outline-black.rounded-0,
+    .btn.btn-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-outline-black.rounded-0.btn-lg,
+    .btn.btn-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty {
+        padding: .25rem .5rem !important;
+    }
 }
 
 
@@ -307,6 +344,11 @@ input[name='q']::placeholder {
     background-color: #C2C2C2;
 }
 
+.navbar-toggler {
+    padding: .6rem .6rem;
+    font-size: 1rem;
+}
+
 .backcolor {
     background-color: #E0E0E0;
 }
@@ -348,4 +390,6 @@ footer{
     padding: 4rem;
     align-items: center;
 }
+
+/*-----touchups*/
 
