--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -9,16 +9,16 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-color">
+                <h1 class="display-4 logo-font text-inform">
                     The page you are looking for isn't available
                 </h1>
-                <h5>
+                <h5 class="text-warning">
                     Error code:404
                 </h5>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" 
-                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                            class="shop-now-button btn btn-lg rounded-0 text-uppercase text-white py-3">
                                 Return ExecuStore
                         </a>
                     </h4>
