--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -30,7 +30,7 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-0 text-uppercase my-2 float-right text-success">Update Information</button>
+                    <button class="btn btn-color rounded-0 text-uppercase my-2 float-right text-success">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
@@ -64,7 +64,7 @@
                                             {% endfor %}
                                         </ul>
                                     </td>
-                                    <td>#{{ order.grand_total }}</td>
+                                    <td>€{{ order.grand_total }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
