--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -82,22 +82,21 @@
                                     <form class="form update-form" method="POST" action="{% url 'edit_bag' item.item_id %}">
                                         {% csrf_token %}
                                         <div class="form-group">
-                                            <div class="input-group">
+                                            <div class="input-group input-group-{{ product.id }}">
                                                 <div class="input-group-prepend">
-                                                    <button class="decrement-qty btn btn-black rounded-0 decrement-qty_{{ item.item_id }}" 
-                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                    <button class="decrement-qty btn btn-black rounded-0 decrement-qty_{{ product.id }}" 
+                                                        data-item_id="{{ product.id }}"></button>
                                                         <span class="icon">
                                                             <i class="fas fa-minus"></i>
                                                         </span>
                                                     </button>
                                                 </div>
-                                                <input class="form-control qty_input id_qty_{{ item.item_id }}" type="number"
-                                                    name="quantity" value="1" min="1" max="99"
-                                                    data-item_id="{{ item.item_id }}"
-                                                    id="id_qty_{{ item.item_id }}">
+                                                <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                                    name="quantity" value="1" min="1" max="9"
+                                                    data-item_id="{{ product.id }}">
                                                 <div class="input-group-append">
-                                                    <button class="increment-qty btn btn-black rounded-0 increment-qty_{{ item.item_id }}"
-                                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                    <button class="increment-qty btn btn-black rounded-0 increment-qty_{{ product.id }}"
+                                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                         <span class="icon">
                                                             <i class="fas fa-plus"></i>
                                                         </span>
