--- a/static/css/base.css
+++ b/static/css/base.css
@@ -411,3 +411,15 @@ footer{
 .brandingLogo{
     display: none;
 }
+
+
+/*-------blog*/
+
+.blog-content {
+    padding: 1.2rem;
+    white-space: pre-line;
+}
+
+.blog-row {
+    padding-top: 15px;
+}
