--- a/templates/base.html
+++ b/templates/base.html
@@ -37,47 +37,43 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>ExecuStore {% block extra_title %}{% endblock %}</title>
-</head>
-<body>
-    <header class="container-fluid fixed-top nav-header">
-        <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font my-0"><strong>Execu</strong>Store</h2>
-                </a>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-100">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our collections">
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item dropdown">
-                        <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                            {% if request.user.is_authenticated %}
-                                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                            {% else %}
-                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                            {% endif %}
+    <title>Kafe Analog {% block extra_title %}{% endblock %}</title>
+  </head>
+  <body>
+      <header class="container-fluid fixed-top nav-header">
+        <div id="topnav" class="row d-md-flex d-none d-md-block">
+          <div class="col-12 col-sm-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+              <li class="list-inline-item"><a href="{% url 'products' %}?category=watches" class="nav-link">Watches</a></li>
+              <li class="list-inline-item"><a href="{% url 'products' %}?category=clothing" class="nav-link">Clothing</a></li>
+              <li class="list-inline-item"><a href="{% url 'blog' %}" class="nav-link">EXECUClub</a></li>
+          </ul>
+          </div>
+          <div class="d-sm-none d-md-block col-12 col-sm-4 my-auto py-1 py-lg-0">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+              <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+            </a>
+          </div>
+          
+          <div class="col my-auto py-1 py-lg-0">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+              <li class="list-inline-item dropdown">
+                <div class="dropdown">
+                  <button class="btn" type="button" id="user-options" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="far fa-user icon"></i>
+                  </button>
+                  <ul class="dropdown-menu" aria-label="dropdown-menu">
+                    {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                        <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
+                        <li><a href="{% url 'add_blog' %}" class="dropdown-item">Blog Management</a></li>
+                      {% endif %}
+                      <li><a href="{% url 'profile' %}" class="dropdown-item">Profile</a></li>
+                      <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
+                    {% else %}
+                      <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
+                      <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
+                    {% endif %}
                         </div>
                     </li>
                     <li class="list-inline-item">
