--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,12 +14,7 @@
     <div class="container-fluid backcolor">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Products</h2>
-                {% for c in current_categories %}
-                    <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-color rounded-0 border border-dark">{{ c.friendly_name }}</span>
-                    </a>
-                {% endfor %}
+                <h2 class="logo-font">{{ product.categorys.name }}</h2>
                 <hr class="w-50 mb-1">
             </div>
         </div>
