--- a/templates/base.html
+++ b/templates/base.html
@@ -55,26 +55,27 @@
             </a>
           </div>
           
-          <div class="col my-auto py-1 py-lg-0">
+          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-              <li class="list-inline-item dropdown">
-                <div class="dropdown">
-                  <button class="btn" type="button" id="user-options" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="far fa-user icon"></i>
-                  </button>
-                  <ul class="dropdown-menu" aria-label="dropdown-menu">
-                    {% if request.user.is_authenticated %}
-                      {% if request.user.is_superuser %}
-                        <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
-                        <li><a href="{% url 'add_blog' %}" class="dropdown-item">Blog Management</a></li>
-                      {% endif %}
-                      <li><a href="{% url 'profile' %}" class="dropdown-item">Profile</a></li>
-                      <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
-                    {% else %}
-                      <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
-                      <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
-                    {% endif %}
+                <li class="list-inline-item dropdown">
+                    <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="text-center">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                            <p class="my-0">My Account</p>
                         </div>
+                    </a>
+                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        {% endif %}
+                    </div>
                     </li>
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-inform font-weight-bold{% else %}text-inform{% endif %} nav-link" href="{% url 'view_bag' %}">
