--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -85,7 +85,7 @@
                                             <div class="input-group input-group-{{ product.id }}">
                                                 <div class="input-group-prepend">
                                                     <button class="decrement-qty btn btn-black rounded-0 decrement-qty_{{ product.id }}" 
-                                                        data-item_id="{{ product.id }}"></button>
+                                                        data-item_id="{{ product.id }}">
                                                         <span class="icon">
                                                             <i class="fas fa-minus"></i>
                                                         </span>
