--- a/static/css/base.css
+++ b/static/css/base.css
@@ -261,10 +261,6 @@ input[name='q']::placeholder {
         font-size: 2rem;
     }
 
-    .nav-link {
-        padding: 0.15rem;
-    }
-
     .nav-link i.fa-lg {
         font-size: 1rem;
     }
@@ -286,6 +282,14 @@ input[name='q']::placeholder {
 
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
+    }
+}
+
+@media screen and (max-width: 903px) {
+    .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        color: #3F0D12;
     }
 }
 
@@ -320,9 +324,11 @@ input[name='q']::placeholder {
     background-color: #C2C2C2;
     color: #3F0D12! important;
 }
+/*-----navbar*/
+
 
 .nav-link {
-    color: #3F0D12;
+    color: #3F0D12! important;
 }
 
 .main-logo-link {
@@ -435,4 +441,14 @@ footer{
 
 .space{
     padding-bottom: 1rem;
+}
+
+/*--------modal*/
+
+.modal {
+    z-index: 9999999999;
+}
+
+.modal-backdrop.show {
+    z-index: auto;
 }
