--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% endblock %}
 
     {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;0,700;1,400&family=Playfair+Display:ital,wght@0,400;0,600;0,700;0,800;1,400;1,800&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
         <script src="https://kit.fontawesome.com/d9ab83fadf.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
@@ -41,7 +41,7 @@
   </head>
   <body>
       <header class="container-fluid fixed-top nav-header">
-        <div id="topnav" class="row d-md-flex d-none d-md-block">
+        <div class="row d-md-flex d-none d-md-block">
           <div class="col-12 col-sm-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
               <li class="list-inline-item"><a href="{% url 'products' %}?category=watches" class="nav-link">Watches</a></li>
@@ -51,64 +51,178 @@
           </div>
           <div class="d-sm-none d-md-block col-12 col-sm-4 my-auto py-1 py-lg-0">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
-              <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+              <h2 class="logo-font">EXECUStore<strong>.</strong></h2>
             </a>
           </div>
           
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <div class="col my-auto py-1 py-lg-0">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item dropdown">
-                    <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="text-center">
-                            <div><i class="fas fa-user fa-lg"></i></div>
-                            <p class="my-0">My Account</p>
+              <li class="list-inline-item dropdown">
+                <div class="dropdown">
+                  <button class="btn nav-link" type="button" id="user-options" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-lg fa-solid fa-user"></i>
+                  </button>
+                  <ul class="dropdown-menu" aria-label="dropdown-menu">
+                    {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                        <li><a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a></li>
+                        <li><a href="{% url 'add_blog' %}" class="dropdown-item">Blog Management</a></li>
+                      {% endif %}
+                      <li><a href="{% url 'profile' %}" class="dropdown-item">Profile</a></li>
+                      <li><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
+                    {% else %}
+                      <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
+                      <li><a href="{% url 'account_login' %}" class="dropdown-item">Login</a></li>
+                    {% endif %}
+                  </ul>
+                </div>
+              </li>
+
+              <li class="list-inline-item">
+                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                  <div class="text-center nav-link">
+                      <div><i class="fas fa-shopping-basket icon"></i></div>
+                      <p class="my-0">
+                          {% if grand_total %}
+                              €{{ grand_total|floatformat:2 }}
+                          {% else %}
+                              
+                          {% endif %}
+                      </p>
+                  </div>
+              </a>
+              </li>
+              <li class="list-inline-item">
+                <!-- Button trigger modal -->
+                  <button class="btn nav-link" type="button" id="user-modal" data-bs-toggle="modal" aria-expanded="false" data-bs-target="#myModal">
+                    <i class="fas fa-search icon"></i>
+                  </button>
+
+                  <!-- Modal -->
+                  <div class="modal" id="myModal" tabindex="9999" aria-labelledby="ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="ModalLabel">Find exactly what you want here!</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                    </a>
-                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                            {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                        {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                        {% endif %}
-                    </div>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-inform font-weight-bold{% else %}text-inform{% endif %} nav-link" href="{% url 'view_bag' %}">
-                            <div class="text-center">
-                                <div><i class="fas fa-cash-register fa-lg icon1"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %}
-                                        €{{ grand_total|floatformat:2 }}
-                                    {% else %}
-                                        €0.00
-                                    {% endif %}
-                                </p>
+                        <div class="modal-body">
+                          <form method="GET" action="{% url 'products' %}">
+                            <div class="input-group w-100">
+                                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our collections!">
+                                <button class="btn" type="submit"><i class="fas fa-search icon"></i></button>
                             </div>
-                        </a>
-                    </li>
-                </ul>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+               </li>
+            </ul>
+          </div>
+        </div>
+        
+        <nav class="navbar navbar-expand-lg navbar-light d-none d-sm-block d-md-none">
+          <div class="container-fluid ">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+              <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="{% url 'products' %}?category=watches">Watches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'products' %}?category=clothing">Clothing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'blog' %}">EXECUClub</a>
+                </li>
+                <li class="nav-item">
+                    {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                        <span><a href="{% url 'add_product' %}" class="nav-link">Product Management</a></span>
+                        <span><a href="{% url 'add_blog' %}" class="nav-link">Blog Management</a></span>
+                      {% endif %}
+                      <span><a href="{% url 'profile' %}" class="nav-link">Profile</a></span>
+                      <span><a href="{% url 'account_logout' %}" class="nav-link">Logout</a></span>
+                    {% else %}
+                      <span><a href="{% url 'account_signup' %}" class="nav-link">Register</a></span>
+                      <span><a href="{% url 'account_login' %}" class="nav-link">Login</a></span>
+                    {% endif %}
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'view_bag' %}">
+                    Your 
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <form method="GET" action="{% url 'products' %}">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our collections">
+                        <button class="btn" type="submit"><i class="fas fa-search icon"></i></button>
+                    </div>
+                  </form>
+                </li>
+              </ul>
             </div>
-        </div>
-        <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-color w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars icon1"></i>
-                </button>
-                {% include 'includes/mobile-top-header.html' %}
-                {% include 'includes/main-nav.html' %}
-            </nav>
-        </div>
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-color-dark text-color">
-                <h4 class="logo-font">Free delivery over €{{ free_delivery_threshold }}</h4>                
-            </div>            
-        </div>
-    </header>
+          </div>
+        </nav>
+
+        <nav class="navbar navbar-expand-lg navbar-dark d-block d-sm-none">
+          <div class="container-fluid ">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+              <h2 class="logo-font my-0">EXECUStore<strong>.</strong></h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavMobile" aria-controls="navbarNavMobile" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavMobile">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="{% url 'products' %}?category=watches">Watches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'products' %}?category=clothing">Clothing</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'blog' %}">EXECUClub</a>
+                </li>
+                <li class="nav-item">
+                    {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                        <span class="dropdown-item"><a href="{% url 'add_product' %}" class="nav-link">Product Management</a></span>
+                        <span class="dropdown-item"><a href="{% url 'add_blog' %}" class="nav-link">Blog Management</a></span>
+                      {% endif %}
+                      <span class="dropdown-item"><a href="{% url 'profile' %}" class="nav-link">Profile</a></span>
+                      <span class="dropdown-item"><a href="{% url 'account_logout' %}" class="nav-link">Logout</a></span>
+                    {% else %}
+                      <span class="dropdown-item"><a href="{% url 'account_signup' %}" class="nav-link">Register</a></span>
+                      <span class="dropdown-item"><a href="{% url 'account_login' %}" class="nav-link">Login</a></span>
+                    {% endif %}
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'view_bag' %}">
+                    Your Cart
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <form method="GET" action="{% url 'products' %}">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                        <button class="btn" type="submit"><i class="fas fa-search icon"></i></button>
+                    </div>
+                  </form>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+        
+      </header>
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
@@ -139,6 +253,26 @@
     </script>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+    <script>
+        // The code below is taken from Richard Ash of CI on SLACK for the initialisation of toasts in Bootstrap5 //
+          let toastElList = [].slice.call(document.querySelectorAll('.toast'))
+          let toastList = toastElList.map(function (toastEl) {
+          let option = {
+              animation: true,
+              autohide: true,
+              delay: 5000,
+          }
+          let bsToast = new bootstrap.Toast(toastEl, option)
+          bsToast.show();
+          })
+
+          var myModal = document.getElementById('myModal')
+          var myInput = document.getElementById('myInput')
+
+          myModal.addEventListener('shown.bs.modal', function () {
+          myInput.focus()
+          })
+        </script>
     {% endblock %}
 
 <footer>
