--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<li class="list-inline-item">
+<!-- <li class="list-inline-item">
     <a class="text-color nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
@@ -50,4 +50,4 @@
             </p>
         </div>
     </a>
-</li>
+</li> -->
