--- a/static/css/base.css
+++ b/static/css/base.css
@@ -200,6 +200,14 @@ input[name='q']::placeholder {
     z-index: -1;
 }
 
+.allauth-form-inner-content {
+    color: #3F0D12;
+}
+
+.form-group {
+    padding: 3px;
+}
+
 .allauth-form-inner-content p {
     margin-top: 1.5rem; /* mt-4 */
     color: #6c757d; /* text-secondary */
@@ -215,7 +223,7 @@ input[name='q']::placeholder {
 }
 
 .allauth-form-inner-content input::placeholder {
-    color: #aab7c4;
+    color: #3F0D12;
 }
 
 .allauth-form-inner-content button,
@@ -231,11 +239,11 @@ input[name='q']::placeholder {
     -ms-user-select: none;
     user-select: none;
     background-color: #000;
-    border: 1px solid #000;
+    border: 1px solid  #000;
     padding: .375rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: 0;
+    border-radius: 5%;
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -246,6 +254,7 @@ input[name='q']::placeholder {
 	color: #fff;
     background-color: #222;
     border-color: #222;
+    border-radius: 5%;
 }
 
 .allauth-form-inner-content a {
